2000-05-02  Michael Han  <mikehan@best.com>

	* FvwmSave.h:
	* FvwmSave.c (add_window):
	Converted to ConfigWinPacket when parsing packet bodies
	(do_save):
	Convert some bitwise tests to use the standard flag macros instead
	* FvwmSaveDesk.h:
	* FvwmSaveDesk.c (add_window):
	Converted to ConfigWinPacket when parsing packet bodies
	(do_save):
	Convert some bitwise tests to use the standard flag macros instead

2000-05-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (refresh_window):
	Refresh and RefreshWindow apply style updates too

	* fvwm/fvwm2.1:
	* fvwm/move_resize.h (stick_function):
	* fvwm/functions.h:
	* fvwm/functions.c (func_config):
	* fvwm/move_resize.c (move_resize_window):
	(GetResizeArguments):
	* fvwm/move_resize.c (move_window_doit):
	(GetGeometryArguments):
	resize command accepts negative size arguments which are interpreted as
	screen size minus given size
	resize command interprets '0' as 'do not change dimension'
	move command interprets '-' as 'do not change coordinate'
	new command MoveResize

	* libs/Parse.h (EatWS):
	removed unused macro

	* fvwm/conditional.c (CreateConditionMask):
	* fvwm/move_resize.c (moveLoop):
	(Maximize):
	(MaximizeHeight):
	(MaximizeWidth):
	* fvwm/window_flags.h (IS_PLACED_WB3):
	* fvwm/fvwm.h (struct):
	new condition MovedButton3 is set when the last interactive move was
	finished with mouse button 3. This is useful to hook fvwm functions to
	add_window events via FvwmEvent

2000-05-01  Michael Han  <mikehan@best.com>

	* modules/FvwmIconMan/fvwm.c (set_win_configuration)
	(configure_window):
	(new_window):
	Convert the add_config_data union member from m_add_config_data to
	ConfigWinPacket from vpacket, and fix up differences between the structs
	* modules/FvwmIdent/FvwmIdent.c (list_configure):
	Convert from reading the packet body array to ConfigWinPacket struct

2000-05-01  Michael Han  <mikehan@best.com>

	* modules/FvwmPager/x_pager.c (UpdateWindowShape):